<resources>
    <string name="app_name">Зеленая Стрелка</string>
    <string name="button_express">Быстрый тест</string>
    <string name="button_category">Тест по категориям</string>
    <string name="button_exam">Главный тест</string>
    <string name="button_showProgress">Показать прогресс</string>
    <string name="button_continue">Дальше</string>
    <string name="lifestyle_button_text">Бытовые привычки</string>
    <string name="shopping_button_text">Покупки</string>
    <string name="food_button_text">Еда</string>
    <string name="travelling_button_text">Путешествия и транспорт</string>
    <string name="start_exam_button_text">Начать экзамен!</string>
    <string name="exam_headline">Экзамен</string>
    <string name="exam_text">Самый главный тест на экологичность образа жизни, в котором обязательно встретятся вопросы всех категорий, а в конце будет выставлена оценка. Экзамен приносит больше всего очков! Готовы?</string>
</resources>