<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".CategoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">

        <Button
            android:id="@+id/category_lifestyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/lifestyle_button_text"
            android:background="@drawable/background_gradient"
            android:layout_weight="1" />

        <Button
            android:id="@+id/category_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/shopping_button_text"
            android:background="@drawable/red_gradient"
            android:layout_weight="1" />

        <Button
            android:id="@+id/category_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/food_button_text"
            android:background="@drawable/orange_gradient"
            android:layout_weight="1" />

        <Button
            android:id="@+id/category_travelling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/travelling_button_text"
            android:background="@drawable/blue_gradient"
            android:layout_weight="1" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>