<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/express"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:text="@string/button_express"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@drawable/background_gradient"
        app:layout_constraintBottom_toTopOf="@+id/category"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/category"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:text="@string/button_category"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@drawable/background_gradient"
        app:layout_constraintBottom_toTopOf="@+id/exam"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/express" />

    <Button
        android:id="@+id/exam"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:text="@string/button_exam"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@drawable/background_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category" />


</androidx.constraintlayout.widget.ConstraintLayout>